--- a/springcloud/springcloud-provider-dept-hystrix-8001/src/main/resources/application.yml
+++ b/springcloud/springcloud-provider-dept-hystrix-8001/src/main/resources/application.yml
@@ -20,9 +20,10 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:7002/eureka/ # 把服务注册到我们刚才配置的注册中心：localhost:7001/eureka
+      defaultZone: http://localhost:7001/eureka/ # 把服务注册到我们刚才配置的注册中心：localhost:7001/eureka
   instance:
-    instance-id: springcloud-provider-dept8001 # 修改Eureka上的默认描述信息
+    instance-id: springcloud-provider-hystrix-dept8001 # 修改Eureka上的默认描述信息
+    prefer-ip-address: true
 
 # 完善监控信息配置
 info:
