--- a/springcloud/pom.xml
+++ b/springcloud/pom.xml
@@ -21,6 +21,7 @@
         <module>springcloud-consumer-hystrix-dashboard</module>
         <module>springcloud-zuul-9527</module>
         <module>springcloud-config-3344</module>
+        <module>springcloud-config-client-3355</module>
     </modules>
 
     <properties>
